topのキャンペーンbem修正

--- a/src/index.html
+++ b/src/index.html
@@ -201,16 +201,16 @@
           </div>
           <div class="campaign__container">
             <div class="campaign__container-slider swiper">
-              <div class="campaign__container-slider-wrapper swiper-wrapper">
-                <div class="campaign__container-slider-slide swiper-slide">
-                  <a href="#" class="campaign__container-card container-card">
-                    <div class="container-card__img">
+              <div class="campaign__container-wrapper swiper-wrapper">
+                <div class="campaign__container-slide swiper-slide">
+                  <a href="#" class="campaign__container-card campaign-card">
+                    <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子" />
                     </div>
-                    <div class="container-card__body card__body">
-                      <div class="card__body-text textarea">
-                        <p class="campaign-card-text__title">ライセンス講習</p>
-                        <p class="campaign-card-text__title-sub">ライセンス取得</p>
+                    <div class="campaign-card__body">
+                      <div class="campaign-card__text">
+                        <p class="campaign-card__title">ライセンス講習</p>
+                        <p class="campaign-card__title-sub">ライセンス取得</p>
                       </div>
                       <p class="campaign-text-line"></p>
                       <div class="campaign-card-price">
@@ -223,15 +223,15 @@
                     </div>
                   </a>
                 </div>
-                <div class="campaign__container-slider-slide swiper-slide">
-                  <a href="#" class="campaign__container-card container-card">
-                    <div class="container-card__img">
+                <div class="campaign__container-slide swiper-slide">
+                  <a href="#" class="campaign__container-card campaign-card">
+                    <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
                     </div>
-                    <div class="container-card__body card__body">
-                      <div class="card__body-text textarea">
-                        <p class="campaign-card-text__title">体験ダイビング</p>
-                        <p class="campaign-card-text__title-sub">貸切体験ダイビング</p>
+                    <div class="campaign-card__body">
+                      <div class="campaign-card__text">
+                        <p class="campaign-card__title">体験ダイビング</p>
+                        <p class="campaign-card__title-sub">貸切体験ダイビング</p>
                       </div>
                       <p class="campaign-text-line"></p>
                       <div class="campaign-card-price">
@@ -244,15 +244,15 @@
                     </div>
                   </a>
                 </div>
-                <div class="campaign__container-slider-slide swiper-slide">
-                  <a href="#" class="campaign__container-card container-card">
-                    <div class="container-card__img">
+                <div class="campaign__container-slide swiper-slide">
+                  <a href="#" class="campaign__container-card campaign-card">
+                    <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子" />
                     </div>
-                    <div class="container-card__body card__body">
-                      <div class="card__body-text textarea">
-                        <p class="campaign-card-text__title">体験ダイビング</p>
-                        <p class="campaign-card-text__title-sub">ナイトダイビング</p>
+                    <div class="campaign-card__body">
+                      <div class="campaign-card__text">
+                        <p class="campaign-card__title">体験ダイビング</p>
+                        <p class="campaign-card__title-sub">ナイトダイビング</p>
                       </div>
                       <p class="campaign-text-line"></p>
                       <div class="campaign-card-price">
@@ -265,15 +265,15 @@
                     </div>
                   </a>
                 </div>
-                <div class="campaign__container-slider-slide swiper-slide">
-                  <a href="#" class="campaign__container-card container-card">
-                    <div class="container-card__img">
+                <div class="campaign__container-slide swiper-slide">
+                  <a href="#" class="campaign__container-card campaign-card">
+                    <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子" />
                     </div>
-                    <div class="container-card__body card__body">
-                      <div class="card__body-text textarea">
-                        <p class="campaign-card-text__title">ファンダイビング</p>
-                        <p class="campaign-card-text__title-sub">貸切ファンダイビング</p>
+                    <div class="campaign-card__body">
+                      <div class="campaign-card__text">
+                        <p class="campaign-card__title">ファンダイビング</p>
+                        <p class="campaign-card__title-sub">貸切ファンダイビング</p>
                       </div>
                       <p class="campaign-text-line"></p>
                       <div class="campaign-card-price">
