--- a/src/index.html
+++ b/src/index.html
@@ -212,12 +212,12 @@
                         <p class="campaign-card__title">ライセンス講習</p>
                         <p class="campaign-card__title-sub">ライセンス取得</p>
                       </div>
-                      <p class="campaign-text-line"></p>
-                      <div class="campaign-card-price">
-                        <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
-                        <div class="campaign-card-price-box">
-                          <p class="campaign-card-price__old-strike-through">¥56,000</p>
-                          <p class="campaign-card-price__new">¥46,000</p>
+                      <p class="campaign-card__text-line"></p>
+                      <div class="campaign-card__price">
+                        <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
+                        <div class="campaign-card__price-box">
+                          <p class="campaign-card__price-old">¥56,000</p>
+                          <p class="campaign-card__price-new">¥46,000</p>
                         </div>
                       </div>
                     </div>
@@ -233,12 +233,12 @@
                         <p class="campaign-card__title">体験ダイビング</p>
                         <p class="campaign-card__title-sub">貸切体験ダイビング</p>
                       </div>
-                      <p class="campaign-text-line"></p>
-                      <div class="campaign-card-price">
-                        <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
-                        <div class="campaign-card-price-box">
-                          <p class="campaign-card-price__old-strike-through">¥24,000</p>
-                          <p class="campaign-card-price__new">¥18,000</p>
+                      <p class="campaign-card__text-line"></p>
+                      <div class="campaign-card__price">
+                        <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
+                        <div class="campaign-card__price-box">
+                          <p class="campaign-card__price-old">¥24,000</p>
+                          <p class="campaign-card__price-new">¥18,000</p>
                         </div>
                       </div>
                     </div>
@@ -254,12 +254,12 @@
                         <p class="campaign-card__title">体験ダイビング</p>
                         <p class="campaign-card__title-sub">ナイトダイビング</p>
                       </div>
-                      <p class="campaign-text-line"></p>
-                      <div class="campaign-card-price">
-                        <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
-                        <div class="campaign-card-price-box">
-                          <p class="campaign-card-price__old-strike-through">¥10,000</p>
-                          <p class="campaign-card-price__new">¥8,000</p>
+                      <p class="campaign-card__text-line"></p>
+                      <div class="campaign-card__price">
+                        <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
+                        <div class="campaign-card__price-box">
+                          <p class="campaign-card__price-old">¥10,000</p>
+                          <p class="campaign-card__price-new">¥8,000</p>
                         </div>
                       </div>
                     </div>
@@ -275,14 +275,12 @@
                         <p class="campaign-card__title">ファンダイビング</p>
                         <p class="campaign-card__title-sub">貸切ファンダイビング</p>
                       </div>
-                      <p class="campaign-text-line"></p>
-                      <div class="campaign-card-price">
-                        <p class="campaign-card-price__text">全部コミコミ(お一人様)</p>
-                        <div class="campaign-card-price-box">
-                          <div class="campaign-card-price-box">
-                            <p class="campaign-card-price__old-strike-through">¥20,000</p>
-                            <p class="campaign-card-price__new">¥16,000</p>
-                          </div>
+                      <p class="campaign-card__text-line"></p>
+                      <div class="campaign-card__price">
+                        <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
+                        <div class="campaign-card__price-box">
+                          <p class="campaign-card__price-old">¥20,000</p>
+                          <p class="campaign-card__price-new">¥16,000</p>
                         </div>
                       </div>
                     </div>
