タイトル修正

--- a/src/index.html
+++ b/src/index.html
@@ -196,8 +196,8 @@
       <section id="campaign" class="campaign campaign-top">
         <div class="campaign__inner inner">
           <div class="campaign__title section-title">
-            <p class="section-title__main">Campaign</p>
-            <h2 class="section-title__sub">キャンペーン</h2>
+            <p class="section-title__sub">Campaign</p>
+            <h2 class="section-title__main">キャンペーン</h2>
           </div>
           <div class="campaign__container">
             <div class="campaign__container-slider swiper">
@@ -294,16 +294,16 @@
             </div>
           </div>
           <div class="campaign__button-layout">
-            <a href="campaign-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+            <a href="campaign-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span></a>
           </div>
         </div>
       </section>
       <!--アバウトアス-->
       <section id="about-us" class="about-us about-us-top">
         <div class="about-us__inner inner">
-          <div class="about-us section-title">
-            <p class="section-title__main">About us</p>
-            <h2 class="section-title__sub">私たちについて</h2>
+          <div class="about-us__title section-title">
+            <p class="section-title__sub">About us</p>
+            <h2 class="section-title__main">私たちについて</h2>
           </div>
           <div class="about-us__img">
             <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us__img2" />
@@ -313,10 +313,7 @@
             <h3 class="about-us-title">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
             <div class="about-us__container-box">
               <p class="about-us-text">
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト<span
-                  class="about-us__md-none"
-                  >が入ります。</span
-                >
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト<span class="about-us__md-none">が入ります。</span>
               </p>
               <div class="about-us__button-layout">
                 <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
@@ -329,8 +326,8 @@
       <section id="information" class="information information-top">
         <div class="information__inner inner">
           <div class="information section-title">
-            <p class="section-title__main">Information</p>
-            <h2 class="section-title__sub">ダイビング情報</h2>
+            <p class="section-title__sub">Information</p>
+            <h2 class="section-title__main">ダイビング情報</h2>
           </div>
           <div class="information__container">
             <div class="information__img colorbox">
@@ -339,11 +336,7 @@
             <div class="information__box">
               <h3 class="information__box-title">ライセンス講習</h3>
               <p class="information__text-line"></p>
-              <p class="information__text">
-                当店はダイビングライセンス（Cカード）世界最大の教育機関PADI<br class="md-none" />の「正規店」として店舗登録されています。<br />正規登録店として、安心安全に初めての方でも安心安全にライセン<br
-                  class="md-none"
-                />ス取得をサポート致します。
-              </p>
+              <p class="information__text">当店はダイビングライセンス（Cカード）世界最大の教育機関PADI<br class="md-none" />の「正規店」として店舗登録されています。<br />正規登録店として、安心安全に初めての方でも安心安全にライセン<br class="md-none" />ス取得をサポート致します。</p>
               <div class="information__button-layout">
                 <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
               </div>
@@ -355,10 +348,10 @@
       <section id="blog" class="blog blog-top">
         <div class="blog__inner inner">
           <div class="blog-section-title">
-            <p class="section-title__main md-show">Blog</p>
-            <p class="section-title__main-white md-none">Blog</p>
-            <h2 class="section-title__sub md-show">ブログ</h2>
-            <h2 class="section-title__sub-white md-none">ブログ</h2>
+            <p class="section-title__sub md-show">Blog</p>
+            <p class="section-title__sub-white md-none">Blog</p>
+            <h2 class="section-title__main md-show">ブログ</h2>
+            <h2 class="section-title__main-white md-none">ブログ</h2>
           </div>
           <div class="blog__cards">
             <a class="blog-card__item-box">
@@ -410,8 +403,8 @@
       <section id="voice" class="voice voice-top">
         <div class="voice__inner inner">
           <div class="voice section-title">
-            <p class="section-title__main">Voice</p>
-            <h2 class="section-title__sub">お客様の声</h2>
+            <p class="section-title__sub">Voice</p>
+            <h2 class="section-title__main">お客様の声</h2>
           </div>
           <div class="voice__cards">
             <div class="voice-card__item-box">
@@ -430,7 +423,6 @@
                     <img src="./assets/images/voice-img1.jpg" alt="ベージュの帽子を被った笑顔の女性" />
                   </div>
                 </div>
-                <!-- <p class="voice-text-line"></p> -->
                 <div class="voice-card__text-box">
                   <p class="voice-card__text-sub">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
@@ -454,7 +446,6 @@
                     <img src="./assets/images/voice-img2.jpg" alt="グッドグッド紺色のシャツを着た男性" />
                   </div>
                 </div>
-                <!-- <p class="voice-text-line"></p> -->
                 <div class="voice-card__text-box">
                   <p class="voice-card__text-sub">
                     ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。
@@ -472,8 +463,8 @@
       <section id="price" class="price price-top">
         <div class="price__inner inner">
           <div class="price section-title">
-            <p class="section-title__main">Price</p>
-            <h2 class="section-title__sub">料金一覧</h2>
+            <p class="section-title__sub">Price</p>
+            <h2 class="section-title__main">料金一覧</h2>
           </div>
           <div class="price__container">
             <div class="price__img-sp md-show">
@@ -584,8 +575,8 @@
             </div>
             <div class="contact__title-layout">
               <div class="contact section-title">
-                <p class="section-title__main-large">Contact</p>
-                <h2 class="section-title__sub">お問い合わせ</h2>
+                <p class="section-title__sub-large">Contact</p>
+                <h2 class="section-title__main">お問い合わせ</h2>
                 <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
                 <div class="contact-button-layout">
                   <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
