--- a/src/index.html
+++ b/src/index.html
@@ -310,10 +310,10 @@
             <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us__img1" />
           </div>
           <div class="about-us__container">
-            <h3 class="about-us-title">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
+            <h3 class="about-us__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
             <div class="about-us__container-box">
-              <p class="about-us-text">
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト<span class="about-us__md-none">が入ります。</span>
+              <p class="about-us__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
               <div class="about-us__button-layout">
                 <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
