--- a/src/index.html
+++ b/src/index.html
@@ -312,11 +312,9 @@
           <div class="about-us__container">
             <h3 class="about-us__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
             <div class="about-us__container-box">
-              <p class="about-us__text">
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-              </p>
+              <p class="about-us__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               <div class="about-us__button-layout">
-                <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+                <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span></a>
               </div>
             </div>
           </div>
