インフォメーションbem修正

--- a/src/index.html
+++ b/src/index.html
@@ -323,7 +323,7 @@
       <!--インフォメーション-->
       <section id="information" class="information information-top">
         <div class="information__inner inner">
-          <div class="information section-title">
+          <div class="information__title section-title">
             <p class="section-title__sub">Information</p>
             <h2 class="section-title__main">ダイビング情報</h2>
           </div>
