ブログセクションタイトル修正

--- a/src/index.html
+++ b/src/index.html
@@ -345,11 +345,9 @@
       <!--ブログ-->
       <section id="blog" class="blog blog-top">
         <div class="blog__inner inner">
-          <div class="blog-section-title">
-            <p class="section-title__sub md-show">Blog</p>
-            <p class="section-title__sub-white md-none">Blog</p>
-            <h2 class="section-title__main md-show">ブログ</h2>
-            <h2 class="section-title__main-white md-none">ブログ</h2>
+          <div class="blog__title section-title">
+            <p class="section-title__sub section-title__sub-white">Blog</p>
+            <h2 class="section-title__main section-title__main-white">ブログ</h2>
           </div>
           <div class="blog__cards">
             <a class="blog-card__item-box">
