ボイスまでbem修正

--- a/src/index.html
+++ b/src/index.html
@@ -398,12 +398,12 @@
       <!--ボイス-->
       <section id="voice" class="voice voice-top">
         <div class="voice__inner inner">
-          <div class="voice section-title">
+          <div class="voice__title section-title">
             <p class="section-title__sub">Voice</p>
             <h2 class="section-title__main">お客様の声</h2>
           </div>
           <div class="voice__cards">
-            <div class="voice-card__item-box">
+            <div class="voice-cards__item-box voice-card">
               <a href="#" class="voice-card__item">
                 <div class="voice-card__container">
                   <div class="voice-card__title-box">
@@ -426,7 +426,7 @@
                 </div>
               </a>
             </div>
-            <div class="voice-card__item-box">
+            <div class="voice-cards__item-box voice-card">
               <a href="#" class="voice-card__item">
                 <div class="voice-card__container">
                   <div class="voice-card__title-box">
@@ -439,7 +439,7 @@
                     </div>
                   </div>
                   <div class="voice-card__img colorbox">
-                    <img src="./assets/images/voice-img2.jpg" alt="グッドグッド紺色のシャツを着た男性" />
+                    <img src="./assets/images/voice-img2.jpg" alt="グッドサインをした紺色のシャツを着た男性" />
                   </div>
                 </div>
                 <div class="voice-card__text-box">
@@ -450,7 +450,7 @@
               </a>
             </div>
           </div>
-          <div class="voice-button-layout">
+          <div class="voice__button-layout">
             <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
           </div>
         </div>
