--- a/src/index.html
+++ b/src/index.html
@@ -458,7 +458,7 @@
       <!--プライス-->
       <section id="price" class="price price-top">
         <div class="price__inner inner">
-          <div class="price section-title">
+          <div class="price__title section-title">
             <p class="section-title__sub">Price</p>
             <h2 class="section-title__main">料金一覧</h2>
           </div>
@@ -467,9 +467,9 @@
               <img src="./assets/images/price-img2.jpg" alt="ウミガメが海中を移動している様子" />
             </div>
             <div class="price__items">
-              <div class="price-item">
+              <div class="price__items-item price-item">
                 <h3 class="price-item__title">ライセンス講習</h3>
-                <p class="price-text-line"></p>
+                <p class="price-item__text-line"></p>
                 <dl class="price-item__box">
                   <dt class="price-item__text">オープンウォーターダイバーコース</dt>
                   <dd class="price-item__text-sub">¥50,000</dd>
@@ -479,9 +479,9 @@
                   <dd class="price-item__text-sub">¥70,000</dd>
                 </dl>
               </div>
-              <div class="price-item">
+              <div class="price__items-item price-item">
                 <h3 class="price-item__title">体験ダイビング</h3>
-                <p class="price-text-line"></p>
+                <p class="price-item__text-line"></p>
                 <dl class="price-item__box">
                   <dt class="price-item__text">ビーチ体験ダイビング(半日)</dt>
                   <dd class="price-item__text-sub">¥7,000</dd>
@@ -493,9 +493,9 @@
                   <dd class="price-item__text-sub">¥18,000</dd>
                 </dl>
               </div>
-              <div class="price-item">
+              <div class="price__items-item price-item">
                 <h3 class="price-item__title">ファンダイビング</h3>
-                <p class="price-text-line"></p>
+                <p class="price-item__text-line"></p>
                 <dl class="price-item__box">
                   <dt class="price-item__text">ビーチダイビング(2ダイブ)</dt>
                   <dd class="price-item__text-sub">¥14,000</dd>
@@ -507,9 +507,9 @@
                   <dd class="price-item__text-sub">¥10,000</dd>
                 </dl>
               </div>
-              <div class="price-item">
+              <div class="price__items-item price-item">
                 <h3 class="price-item__title">スペシャルダイビング</h3>
-                <p class="price-text-line"></p>
+                <p class="price-item__text-line"></p>
                 <dl class="price-item__box">
                   <dt class="price-item__text">貸切ダイビング(2ダイブ)</dt>
                   <dd class="price-item__text-sub">¥24,000</dd>
@@ -522,7 +522,7 @@
               <img src="./assets/images/price-img1.jpg" alt="ウミガメが海中を移動している様子" />
             </div>
           </div>
-          <div class="price-button-layout">
+          <div class="price__button-layout">
             <a href="#" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
           </div>
         </div>
