--- a/src/index.html
+++ b/src/index.html
@@ -531,34 +531,34 @@
       <section id="contact" class="contact contact-top">
         <div class="contact__inner inner">
           <div class="contact__container">
-            <div class="contact__box">
-              <a href="index.html" class="contact__logo-layout">
-                <h3 class="contact__logo">
+            <div class="contact__box contact-box">
+              <a href="index.html" class="contact-box__logo-layout">
+                <h3 class="contact-box__logo">
                   <img src="./assets/images/contact-logo.svg" alt="CodeUps" />
                 </h3>
               </a>
-              <p class="contact-text-line"></p>
-              <div class="contact-information">
-                <ul class="contact-information__items">
-                  <address class="contact-private-information">
-                    <li class="contact-information__item">
-                      <p class="contact-information__item-text">沖縄県那覇市1-1</p>
+              <p class="contact-box__text-line"></p>
+              <div class="contact-box__information">
+                <ul class="contact-box__items">
+                  <address class="contact-box__private">
+                    <li class="contact-box__items-item contact-item">
+                      <p class="contact-item__text">沖縄県那覇市1-1</p>
                     </li>
-                    <li class="contact-information__item">
+                    <li class="contact-box__items-item contact-item">
                       <a href="TEL:0120-000-0000">
-                        <p class="contact-information__item-text">TEL:0120-000-0000</p>
+                        <p class="contact-item__text">TEL:0120-000-0000</p>
                       </a>
                     </li>
                   </address>
-                  <li class="contact-information__item">
-                    <p class="contact-information__item-text">営業時間:8:30-19:00</p>
+                  <li class="contact-box__items-item contact-item">
+                    <p class="contact-item__text">営業時間:8:30-19:00</p>
                   </li>
-                  <li class="contact-information__item">
-                    <p class="contact-information__item-text">定休日:毎週火曜日</p>
+                  <li class="contact-box__items-item contact-item">
+                    <p class="contact-item__text">定休日:毎週火曜日</p>
                   </li>
                 </ul>
                 <iframe
-                  class="contact__img"
+                  class="contact-box__img"
                   src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2467.513625872067!2d127.69482336933658!3d26.222972059058005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1708751870509!5m2!1sja!2sjp"
                   width="600"
                   height="450"
@@ -570,11 +570,11 @@
               </div>
             </div>
             <div class="contact__title-layout">
-              <div class="contact section-title">
+              <div class="contact__title section-title">
                 <p class="section-title__sub-large">Contact</p>
                 <h2 class="section-title__main">お問い合わせ</h2>
-                <p class="contact-section-title__text">ご予約・お問い合わせはコチラ</p>
-                <div class="contact-button-layout">
+                <p class="contact__title-text">ご予約・お問い合わせはコチラ</p>
+                <div class="contact__button-layout">
                   <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
                 </div>
               </div>
