--- a/src/index.html
+++ b/src/index.html
@@ -588,27 +588,27 @@
     </main>
     <!--フッター-->
     <footer class="footer footer-top">
-      <div class="footer-menu__inner inner">
-        <div class="footer-menu__title">
+      <div class="footer__inner inner">
+        <div class="footer__title">
           <a href="#" class="footer__name-layout">
             <h3 class="footer__name">
               <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps" />
             </h3>
           </a>
-          <div class="footer-logo-box">
-            <a class="facebook-logo">
+          <div class="footer__logo-box">
+            <a class="footer__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a class="instagram-logo">
+            <a class="footer__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
         </div>
-        <div class="footer-menu__container">
-          <div class="footer-menu__container-left">
-            <ul class="footer-menu__items-a">
-              <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-a">
+        <div class="footer__container">
+          <div class="footer__container-left">
+            <ul class="footer__items-a">
+              <li class="footer__item">
+                <a href="#" class="footer__link-a">
                   <p class="footer__logo-text">キャンペーン</p>
                 </a>
               </li>
