フッターbem修正

--- a/src/index.html
+++ b/src/index.html
@@ -589,27 +589,27 @@
     <!--フッター-->
     <footer class="footer footer-top">
       <div class="footer__inner inner">
-        <div class="footer__title">
+        <div class="footer__title footer-title">
           <a href="#" class="footer__name-layout">
             <h3 class="footer__name">
               <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps" />
             </h3>
           </a>
-          <div class="footer__logo-box">
-            <a class="footer__facebook-logo">
+          <div class="footer-title__logo-box">
+            <a class="footer-title__facebook-logo">
               <img src="./assets/images/facebook-logo.svg" alt="facebook" />
             </a>
-            <a class="footer__instagram-logo">
+            <a class="footer-title__instagram-logo">
               <img src="./assets/images/insta-logo.svg" alt="instagram" />
             </a>
           </div>
         </div>
-        <div class="footer__container">
-          <div class="footer__container-left">
-            <ul class="footer__items-a">
-              <li class="footer__item">
-                <a href="#" class="footer__link-a">
-                  <p class="footer__logo-text">キャンペーン</p>
+        <div class="footer__container footer-menu">
+          <div class="footer-menu__left">
+            <ul class="footer-menu__items-a">
+              <li class="footer-menu__item">
+                <a href="#" class="footer-menu__link-a">
+                  <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
               <li class="footer-menu__item-text"><a href="#">ライセンス取得</a></li>
@@ -617,14 +617,14 @@
               <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">私たちについて</p>
+                  <p class="footer-menu__logo-text">私たちについて</p>
                 </a>
               </li>
             </ul>
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-a">
-                  <p class="footer__logo-text">ダイビング情報</p>
+                  <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
               <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
@@ -632,7 +632,7 @@
               <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">ブログ</p>
+                  <p class="footer-menu__logo-text">ブログ</p>
                 </a>
               </li>
             </ul>
@@ -641,12 +641,12 @@
             <ul class="footer-menu__items-a">
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-a">
-                  <p class="footer__logo-text">お客様の声</p>
+                  <p class="footer-menu__logo-text">お客様の声</p>
                 </a>
               </li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">料金一覧</p>
+                  <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
               <li class="footer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
@@ -656,22 +656,22 @@
             <ul class="footer-menu__items-b">
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-a">
-                  <p class="footer__logo-text">よくある質問</p>
+                  <p class="footer-menu__logo-text">よくある質問</p>
                 </a>
               </li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">プライバシー<br class="md-show" />ポリシー</p>
+                  <p class="footer-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                 </a>
               </li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">利用規約</p>
+                  <p class="footer-menu__logo-text">利用規約</p>
                 </a>
               </li>
               <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link-b">
-                  <p class="footer__logo-text">お問い合わせ</p>
+                  <p class="footer-menu__logo-text">お問い合わせ</p>
                 </a>
               </li>
             </ul>
