クラス名修正

--- a/src/index.html
+++ b/src/index.html
@@ -349,7 +349,7 @@
             <p class="section-title__sub section-title__sub-white">Blog</p>
             <h2 class="section-title__main section-title__main-white">ブログ</h2>
           </div>
-          <div class="blog__cards">
+          <div class="blog__cards blog-cards">
             <a class="blog__cards-item-box blog-card">
               <div href="#" class="blog-card__item">
                 <div class="blog-card__img">
@@ -402,7 +402,7 @@
             <p class="section-title__sub">Voice</p>
             <h2 class="section-title__main">お客様の声</h2>
           </div>
-          <div class="voice__cards">
+          <div class="voice__cards voice-cards">
             <div class="voice-cards__item-box voice-card">
               <a href="#" class="voice-card__item">
                 <div class="voice-card__container">
