--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -160,11 +160,11 @@
         <div class="sub-page-mv js-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
-              <h2 class="sub-page-mv__title-main page-section-title">Campaign</h2>
+              <h2 class="sub-page-mv__title-main page-section-title">About us</h2>
             </div>
             <picture>
-              <source srcset="./assets/images/campaign-page-pc-img.jpg" media="(min-width: 768px)" />
-              <img src="./assets/images/campaign-page-sp-img.jpg" alt="2匹の黄色い魚が泳いでいる様子" />
+              <source srcset="./assets/images/aboutus-page-pc-img.jpg" media="(min-width: 768px)" />
+              <img src="./assets/images/aboutus-page-sp-img.jpg" alt="屋根の上のシーサーがこちらを見ている様子" />
             </picture>
           </div>
         </div>
@@ -175,11 +175,33 @@
           <span>
             <a href="./"><span>TOP</span></a>
           </span>
-          <span>キャンペーン</span>
+          <span>私たちについて</span>
         </div>
       </div>
+      <!--アバウトアス-->
+      <section id="about-us-page" class="about-us-page about-us-page__top">
+        <div class="about-us-page__inner inner">
+          <div class="about-us-page__title section-title">
+            <p class="section-title__sub">About us</p>
+            <h2 class="section-title__main">私たちについて</h2>
+          </div>
+          <div class="about-us-page__img">
+            <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
+            <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1 md-none" />
+          </div>
+          <div class="about-us-page__container">
+            <h3 class="about-us-page__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
+            <div class="about-us-page__container-box">
+              <p class="about-us-page__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
+              <div class="about-us-page__button-layout">
+                <a href="aboutus-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--タブ-->
-      <div class="campaign-page__tab campaign-page__tab-top">
+      <!-- <div class="campaign-page__tab campaign-page__tab-top">
         <div class="campaign-page__tab-inner inner">
           <div class="campaign-page__tab-layout">
             <ul class="campaign-page__tab-items campaign-tab">
@@ -190,9 +212,9 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--コンテンツ-->
-      <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
+      <!-- <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
         <div class="campaign-page-contents__inner inner">
           <ul class="campaign-page-contents__items campaign-page-card">
             <li class="campaign-page-card__item campaign-card">
@@ -327,7 +349,7 @@
             <a class="pagination__next" href="#"></a>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--コンタクト-->
       <section id="contact" class="contact contact-top">
         <div class="contact__inner inner">
