--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -179,12 +179,8 @@
         </div>
       </div>
       <!--アバウトアス-->
-      <section id="about-us-page" class="about-us-page about-us-page__top">
+      <section id="about-us-page" class="about-us-page about-us-page-top">
         <div class="about-us-page__inner inner">
-          <div class="about-us-page__title section-title">
-            <p class="section-title__sub">About us</p>
-            <h2 class="section-title__main">私たちについて</h2>
-          </div>
           <div class="about-us-page__img">
             <img src="./assets/images/aboutus-img3.jpg" alt="2匹の黄色い魚が海中を泳いでいる様子" class="about-us-page__img2" />
             <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1 md-none" />
@@ -193,163 +189,64 @@
             <h3 class="about-us-page__head">Dive&nbsp;into<br />the&nbsp;Ocean</h3>
             <div class="about-us-page__container-box">
               <p class="about-us-page__text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。</p>
-              <div class="about-us-page__button-layout">
-                <a href="aboutus-page.html" class="button">View&nbsp;more<span class="button-arrow2"></span><span class="button-arrow"></span></a>
-              </div>
             </div>
           </div>
         </div>
       </section>
-      <!--タブ-->
-      <!-- <div class="campaign-page__tab campaign-page__tab-top">
-        <div class="campaign-page__tab-inner inner">
-          <div class="campaign-page__tab-layout">
-            <ul class="campaign-page__tab-items campaign-tab">
-              <li class="campaign-tab__item is-color"><a href="#">ALL</a></li>
-              <li class="campaign-tab__item"><a href="#">ライセンス講習</a></li>
-              <li class="campaign-tab__item"><a href="#">ファンダイビング</a></li>
-              <li class="campaign-tab__item"><a href="#">体験ダイビング</a></li>
-            </ul>
+      <!--ギャラリー-->
+      <section id="gallery" class="gallery gallery-top">
+        <div class="gallery__inner inner">
+          <div class="gallery__title section-title">
+            <p class="section-title__sub">Gallery</p>
+            <h2 class="section-title__main">フォト</h2>
           </div>
-        </div>
-      </div> -->
-      <!--コンテンツ-->
-      <!-- <section id="campaign-page-contents" class="campaign-page-contents campaign-page-contents-top">
-        <div class="campaign-page-contents__inner inner">
-          <ul class="campaign-page-contents__items campaign-page-card">
-            <li class="campaign-page-card__item campaign-card">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">ライセンス講習</p>
-                  <p class="campaign-card__title-sub-large">ライセンス取得</p>
-                </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥56,000</p>
-                    <p class="campaign-card__price-new">¥46,000</p>
-                  </div>
-                </div>
-                <div class="campaign-card__text-box md-none">
-                  <p class="campaign-card__text-main">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                  </p>
-                  <div class="campaign-card__date">2023/6/1-9/30</div>
-                  <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                </div>
-                <div class="campaign-card__layout md-none">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+          <ul class="gallery__list gallery-list">
+            <li class="gallery-list__item gallery-list-item">
+              <div class="gallery-list-item__wrap">
+                <div class="gallery-list-item__img">
+                  <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
                 </div>
               </div>
             </li>
-            <li class="campaign-page-card__item">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">体験ダイビング</p>
-                  <p class="campaign-card__title-sub-large">貸切体験ダイビング</p>
-                </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥24,000</p>
-                    <p class="campaign-card__price-new">¥18,000</p>
-                  </div>
-                </div>
-                <div class="campaign-card__text-box md-none">
-                  <p class="campaign-card__text-main">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                  </p>
-                  <div class="campaign-card__date">2023/6/1-9/30</div>
-                  <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                </div>
-                <div class="campaign-card__layout md-none">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+            <li class="gallery-list__item  gallery-list-item">
+              <div class="gallery-list-item__wrap">
+                <div class="gallery-list-item__img">
+                  <img src="./assets/images/gallery2.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
                 </div>
               </div>
             </li>
-            <li class="campaign-page-card__item">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">体験ダイビング</p>
-                  <p class="campaign-card__title-sub-large">ナイトダイビング</p>
-                </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥10,000</p>
-                    <p class="campaign-card__price-new">¥8,000</p>
-                  </div>
-                </div>
-                <div class="campaign-card__text-box md-none">
-                  <p class="campaign-card__text-main">
-                    ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                  </p>
-                  <div class="campaign-card__date">2023/6/1-9/30</div>
-                  <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                </div>
-                <div class="campaign-card__layout md-none">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+            <li class="gallery-list__item  gallery-list-item">
+              <div class="gallery-list-item__wrap">
+                <div class="gallery-list-item__img">
+                  <img src="./assets/images/gallery3.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
                 </div>
               </div>
             </li>
-            <li class="campaign-page-card__item">
-              <div class="campaign-card__img-large">
-                <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子" />
-              </div>
-              <div class="campaign-card__body-large">
-                <div class="campaign-card__text">
-                  <p class="campaign-card__title">ファンダイビング</p>
-                  <p class="campaign-card__title-sub-large">貸切ファンダイビング</p>
+            <li class="gallery-list__item  gallery-list-item">
+              <div class="gallery-list-item__wrap">
+                <div class="gallery-list-item__img">
+                  <img src="./assets/images/gallery4.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
                 </div>
-                <p class="campaign-card__text-line"></p>
-                <div class="campaign-card__price">
-                  <p class="campaign-card__price-text">全部コミコミ(お一人様)</p>
-                  <div class="campaign-card__price-box">
-                    <p class="campaign-card__price-old">¥20,000</p>
-                    <p class="campaign-card__price-new">¥16,000</p>
-                  </div>
-                  <div class="campaign-card__text-box md-none">
-                    <p class="campaign-card__text-main">
-                      ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br />ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
-                    </p>
-                    <div class="campaign-card__date">2023/6/1-9/30</div>
-                    <p class="campaign-card__reserve">ご予約・お問い合わせはコチラ</p>
-                  </div>
-                  <div class="campaign-card__layout md-none">
-                    <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
-                  </div>
+              </div>
+            </li>
+            <li class="gallery-list__item  gallery-list-item">
+              <div class="gallery-list-item__wrap">
+                <div class="gallery-list-item__img">
+                  <img src="./assets/images/gallery5.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+                </div>
+              </div>
+            </li>
+            <li class="gallery-list__item  gallery-list-item">
+              <div class="gallery-list-item__wrap">
+                <div class="gallery-list-item__img">
+                  <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
                 </div>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <div class="pagination pagination-top">
-        <div class="pagination__inner inner">
-          <div class="pagination-nav">
-            <a class="pagination__prev" href="#"></a>
-            <span class="pagination__current">1</span>
-            <a class="page larger" href="#">2</a>
-            <a class="page larger" href="#">3</a>
-            <a class="page larger" href="#">4</a>
-            <a class="page larger md-none" href="#">5</a>
-            <a class="page larger md-none" href="#">6</a>
-            <a class="pagination__next" href="#"></a>
-          </div>
-        </div>
-      </div> -->
+
       <!--コンタクト-->
       <section id="contact" class="contact contact-top">
         <div class="contact__inner inner">
