ギャラリー修正

--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -201,47 +201,23 @@
             <h2 class="section-title__main">フォト</h2>
           </div>
           <ul class="gallery__list gallery-list">
-            <li class="gallery-list__item gallery-list-item">
-              <div class="gallery-list-item__wrap">
-                <div class="gallery-list-item__img">
-                  <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
-                </div>
-              </div>
+            <li class="gallery-list__item">
+                <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item  gallery-list-item">
-              <div class="gallery-list-item__wrap">
-                <div class="gallery-list-item__img">
-                  <img src="./assets/images/gallery2.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
-                </div>
-              </div>
+            <li class="gallery-list__item">
+                <img src="./assets/images/gallery2.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item  gallery-list-item">
-              <div class="gallery-list-item__wrap">
-                <div class="gallery-list-item__img">
-                  <img src="./assets/images/gallery3.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
-                </div>
-              </div>
+            <li class="gallery-list__item">
+                <img src="./assets/images/gallery3.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item  gallery-list-item">
-              <div class="gallery-list-item__wrap">
-                <div class="gallery-list-item__img">
-                  <img src="./assets/images/gallery4.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
-                </div>
-              </div>
+            <li class="gallery-list__item">
+                <img src="./assets/images/gallery4.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item  gallery-list-item">
-              <div class="gallery-list-item__wrap">
-                <div class="gallery-list-item__img">
-                  <img src="./assets/images/gallery5.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
-                </div>
-              </div>
+            <li class="gallery-list__item">
+                <img src="./assets/images/gallery5.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item  gallery-list-item">
-              <div class="gallery-list-item__wrap">
-                <div class="gallery-list-item__img">
-                  <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
-                </div>
-              </div>
+            <li class="gallery-list__item">
+                <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
             </li>
           </ul>
         </div>
