--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -157,7 +157,7 @@
     <main>
       <!--サブビュー-->
       <section id="sub-page-mv" class="sub-page-mv">
-        <div class="sub-page-mv js-mv">
+        <div class="sub-page-mv mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
               <h2 class="sub-page-mv__title-main page-section-title">About us</h2>
