--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
     </header>
     <main>
       <!--メインビュー-->
-      <div class="mv js-mv">
+      <div class="mv">
         <div class="mv__inner">
           <div class="mv__title-wrap">
             <h2 class="mv__title-sub">DIVING</h2>
