--- a/src/index.html
+++ b/src/index.html
@@ -165,28 +165,28 @@
           <div class="mv__slider swiper">
             <div class="mv__slider swiper-wrapper">
               <div class="mv__slider swiper-slide">
-                <div class="swiper-img">
-                  <img src="./assets/images/mv-img1-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop" />
-                  <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile" />
-                </div>
+                <picture>
+                  <source srcset="./assets/images/mv-img1-pc.jpg" media="(min-width: 768px)" />
+                  <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" />
+                </picture>
               </div>
               <div class="mv__slider swiper-slide">
-                <div class="swiper-img">
-                  <img src="./assets/images/mv-img2-pc.jpg" alt="海を泳いでいるウミガメを2人のダイバーがみている様子" class="u-desktop" />
-                  <img src="./assets/images/mv-img2.jpg" alt="海を泳いでいるウミガメを2人のダイバーがみている様子" class="u-mobile" />
-                </div>
+                <picture>
+                  <source srcset="./assets/images/mv-img2-pc.jpg" media="(min-width: 768px)" />
+                  <img src="./assets/images/mv-img2.jpg" alt="海を泳いでいるウミガメを2人のダイバーがみている様子" />
+                </picture>
               </div>
               <div class="mv__slider swiper-slide">
-                <div class="swiper-img">
-                  <img src="./assets/images/mv-img3-pc.jpg" alt="沖合に船を停泊させている様子" class="u-desktop" />
-                  <img src="./assets/images/mv-img3.jpg" alt="沖合に船を停泊させている様子" class="u-mobile" />
-                </div>
+                <picture>
+                  <source srcset="./assets/images/mv-img3-pc.jpg" media="(min-width: 768px)" />
+                  <img src="./assets/images/mv-img3.jpg" alt="沖合に船を停泊させている様子" />
+                </picture>
               </div>
               <div class="mv__slider swiper-slide">
-                <div class="swiper-img">
-                  <img src="./assets/images/mv-img4-pc.jpg" alt="青い海と白い砂浜が広がっている様子" class="u-desktop" />
-                  <img src="./assets/images/mv-img4.jpg" alt="青い海と白い砂浜が広がっている様子" class="u-mobile" />
-                </div>
+                <picture>
+                  <source srcset="./assets/images/mv-img4-pc.jpg" media="(min-width: 768px)" />
+                  <img src="./assets/images/mv-img4.jpg" alt="青い海と白い砂浜が広がっている様子" />
+                </picture>
               </div>
             </div>
           </div>
