--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <div class="header__inner">
         <a href="index.html" class="header__name-layout">
           <h1 class="header__name">
-            <img class="header__logo" src="./assets/images/logo.svg" alt="CodeUps" />
+            <img class="logo" src="./assets/images/logo.svg" alt="CodeUps" />
           </h1>
         </a>
         <nav class="header__nav md-none">
