ハンバーガー修正

--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -67,8 +67,8 @@
             </li>
           </ul>
         </nav>
-        <div class="hamburger js-hamburger md-show">
-          <div class="hamburger-layout">
+        <div class="header__ js-hamburger md-show">
+          <div class="header__hamburger-layout">
             <span></span>
             <span></span>
             <span></span>
