--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -74,7 +74,7 @@
             <span></span>
           </div>
         </div>
-        <div class="drawer-menu js-drawer">
+        <div class="header__drawer-menu drawer-menu js-drawer">
           <div class="drawer-menu__inner">
             <div class="drawer-menu__container">
               <div class="drawer-menu__container-left">
