--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
             <h2 class="mv__title-sub">DIVING</h2>
             <h3 class="mv__text">into the ocean</h3>
           </div>
-          <div class="mv__slider swiper">
+          <div class="mv__slider swiper js-mv-swiper">
             <div class="mv__slider swiper-wrapper">
               <div class="mv__slider swiper-slide">
                 <picture>
