キャンペーンjs修正

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,7 @@
             <h2 class="section-title__main">キャンペーン</h2>
           </div>
           <div class="campaign__container">
-            <div class="campaign__container-slider swiper">
+            <div class="campaign__container-slider swiper js-campaign-swiper">
               <div class="campaign__container-wrapper swiper-wrapper">
                 <div class="campaign__container-slide swiper-slide">
                   <a href="#" class="campaign__container-card campaign-card">
