--- a/src/index.html
+++ b/src/index.html
@@ -203,7 +203,7 @@
             <div class="campaign__container-slider swiper js-campaign-swiper">
               <div class="campaign__container-wrapper swiper-wrapper">
                 <div class="campaign__container-slide swiper-slide">
-                  <a href="#" class="campaign__container-card campaign-card">
+                  <a href="#" class="campaign-card">
                     <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子" />
                     </div>
@@ -223,7 +223,7 @@
                   </a>
                 </div>
                 <div class="campaign__container-slide swiper-slide">
-                  <a href="#" class="campaign__container-card campaign-card">
+                  <a href="#" class="campaign-card">
                     <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
                     </div>
@@ -243,7 +243,7 @@
                   </a>
                 </div>
                 <div class="campaign__container-slide swiper-slide">
-                  <a href="#" class="campaign__container-card campaign-card">
+                  <a href="#" class="campaign-card">
                     <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子" />
                     </div>
@@ -263,7 +263,7 @@
                   </a>
                 </div>
                 <div class="campaign__container-slide swiper-slide">
-                  <a href="#" class="campaign__container-card campaign-card">
+                  <a href="#" class="campaign-card">
                     <div class="campaign-card__img">
                       <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子" />
                     </div>
