--- a/src/index.html
+++ b/src/index.html
@@ -345,7 +345,7 @@
             <h2 class="section-title__main section-title__main--white">ブログ</h2>
           </div>
           <div class="blog__cards blog-cards">
-            <a class="blog__cards-item-box blog-card">
+            <a class="blog-cards__item-box blog-card">
               <div href="#" class="blog-card__item">
                 <div class="blog-card__img">
                   <img src="./assets/images/blog-img2.jpg" alt="海底にカラフルなイソギンチャクが生えている様子" />
@@ -357,7 +357,7 @@
                 </div>
               </div>
             </a>
-            <a class="blog__cards-item-box blog-card">
+            <a class="blog-cards__item-box blog-card">
               <div href="#" class="blog-card__item">
                 <div class="blog-card__img">
                   <img src="./assets/images/blog-img3.jpg" alt="ウミガメが海中を優雅に泳いでいる様子" />
@@ -369,7 +369,7 @@
                 </div>
               </div>
             </a>
-            <a class="blog__cards-item-box blog-card">
+            <a class="blog-cards__item-box blog-card">
               <div href="#" class="blog-card__item">
                 <div class="blog-card__img">
                   <img src="./assets/images/blog-img4.jpg" alt="イソギンチャクの間にカクレクマノミが隠れている様子" />
