コンタクトまとめ

--- a/src/index.html
+++ b/src/index.html
@@ -528,7 +528,7 @@
               <div class="contact-box__information">
                 <ul class="contact-box__items">
                   <li class="contact-box__items-item contact-item">
-                    <address class="contact-box__private">
+                    <address class="contact-item__private">
                       <p class="contact-item__text">沖縄県那覇市1-1</p>
                     </address>
                   </li>
