ギャラリー修正

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -390,9 +390,9 @@
     <footer class="footer footer-top">
       <div class="footer__inner inner">
         <div class="footer__title footer-title">
-          <a href="#" class="footer__name-layout">
-            <h3 class="footer__name">
-              <img class="footer__name-logo" src="./assets/images/logo.svg" alt="CodeUps" />
+          <a href="#" class="footer-title__name-layout">
+            <h3 class="footer-title__name">
+              <img class="footer-title__name-logo" src="./assets/images/logo.svg" alt="CodeUps" />
             </h3>
           </a>
           <div class="footer-title__logo-box">
