モーダル修正

--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -201,23 +201,70 @@
             <h2 class="section-title__main">フォト</h2>
           </div>
           <ul class="gallery__list gallery-list">
-            <li class="gallery-list__item">
-              <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+            <li class="gallery-list__item js-modal-open" data-target="1">
+              <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りをオレンジ色の魚達が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item">
-              <img src="./assets/images/gallery2.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+            <li class="gallery-list__item js-modal-open" data-target="2">
+              <img src="./assets/images/gallery2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
             </li>
-            <li class="gallery-list__item">
-              <img src="./assets/images/gallery3.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+            <li class="gallery-list__item js-modal-open" data-target="3">
+              <img src="./assets/images/gallery3.jpg" alt="2匹の熱帯魚が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item">
-              <img src="./assets/images/gallery4.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+            <li class="gallery-list__item js-modal-open" data-target="4">
+              <img src="./assets/images/gallery4.jpg" alt="1匹の熱帯魚が泳いでいる様子" />
             </li>
-            <li class="gallery-list__item">
-              <img src="./assets/images/gallery5.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+            <li class="gallery-list__item js-modal-open" data-target="5">
+              <img src="./assets/images/gallery5.jpg" alt="熱帯魚が群れで泳いでいる様子" />
             </li>
-            <li class="gallery-list__item">
-              <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを赤い魚達が泳いでいる様子" />
+            <li class="gallery-list__item js-modal-open" data-target="6">
+              <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを黄色い魚が泳いでいる様子" />
+            </li>
+          </ul>
+        </div>
+        <!-- モーダル -->
+        <div class="gallery__modal gallery-modal">
+          <ul class="gallery-modal__items">
+            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-1">
+              <div class="gallery-modal__inner inner">
+                <div class="gallery-modal__img">
+                  <img src="./assets/images/gallery1.jpg" alt="珊瑚礁の周りをオレンジ色の魚達が泳いでいる様子" />
+                </div>
+              </div>
+            </li>
+            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-2">
+              <div class="gallery-modal__inner inner">
+                <div class="gallery-modal__img">
+                  <img src="./assets/images/gallery2.jpg" alt="綺麗な海に船が3隻停泊している様子" />
+                </div>
+              </div>
+            </li>
+            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-3">
+              <div class="gallery-modal__inner inner">
+                <div class="gallery-modal__img">
+                  <img src="./assets/images/gallery3.jpg" alt="2匹の熱帯魚が泳いでいる様子" />
+                </div>
+              </div>
+            </li>
+            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-4">
+              <div class="gallery-modal__inner inner">
+                <div class="gallery-modal__img">
+                  <img src="./assets/images/gallery4.jpg" alt="1匹の熱帯魚が泳いでいる様子" />
+                </div>
+              </div>
+            </li>
+            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-5">
+              <div class="gallery-modal__inner inner">
+                <div class="gallery-modal__img">
+                  <img src="./assets/images/gallery5.jpg" alt="熱帯魚が群れで泳いでいる様子" />
+                </div>
+              </div>
+            </li>
+            <li class="gallery-modal__item js-modal js-modal-close" id="gallery-modal-6">
+              <div class="gallery-modal__inner inner">
+                <div class="gallery-modal__img">
+                  <img src="./assets/images/gallery6.jpg" alt="珊瑚礁の周りを黄色い魚が泳いでいる様子" />
+                </div>
+              </div>
             </li>
           </ul>
         </div>
