--- a/src/index.html
+++ b/src/index.html
@@ -302,7 +302,7 @@
             <h2 class="section-title__main">私たちについて</h2>
           </div>
           <div class="about-us__img">
-            <div class="about-us__img-small md-none">
+            <div class="about-us__img-small">
               <img src="./assets/images/aboutus-img1.jpg" alt="屋根の上にシーサーの置物がおいてある様子" class="about-us-page__img1" />
             </div>
             <div class="about-us__img-big">
@@ -548,16 +548,18 @@
                     <p class="contact-item__text">定休日:毎週火曜日</p>
                   </li>
                 </ul>
-                <iframe
-                  class="contact-box__img"
-                  src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2467.513625872067!2d127.69482336933658!3d26.222972059058005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1708751870509!5m2!1sja!2sjp"
-                  width="600"
-                  height="450"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
+                <div class="contact-box__map">
+                  <iframe
+                    class="contact-box__img"
+                    src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d2467.513625872067!2d127.69482336933658!3d26.222972059058005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z6YKj6KaH5biCMS0x!5e0!3m2!1sja!2sjp!4v1708751870509!5m2!1sja!2sjp"
+                    width="600"
+                    height="450"
+                    style="border: 0"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
               </div>
             </div>
             <div class="contact__title-layout">
@@ -565,11 +567,11 @@
                 <p class="section-title__sub--large">Contact</p>
                 <h2 class="section-title__main">お問い合わせ</h2>
               </div>
-                <p class="contact__title-text">ご予約・お問い合わせはコチラ</p>
-                <div class="contact__button-layout">
-                  <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
-                </div>
-              <a href="#" class="contact__top-button">
+              <p class="contact__title-text">ご予約・お問い合わせはコチラ</p>
+              <div class="contact__button-layout">
+                <a href="#" class="button">Contact&nbsp;us<span class="button-arrow2"></span><span class="button-arrow"></span> </a>
+              </div>
+              <a href="#" class="contact__top-button js-top-button">
                 <img class="top-button-img" src="./assets/images/contact-top-button.svg" alt="トップボタン" />
               </a>
             </div>
@@ -578,7 +580,7 @@
       </section>
     </main>
     <!--フッター-->
-    <footer class="footer footer-top">
+    <footer class="footer footer-top js-footer">
       <div class="footer__inner inner">
         <div class="footer__title footer-title">
           <a href="#" class="footer-title__name-layout">
